--- a/index.html
+++ b/index.html
@@ -69,20 +69,20 @@ button:hover{
 <!-- PAGE 1 -->
 <div id="p1" class="page show">
   <h1>Happy Valentine 🤍</h1>
-  <p>Vậy là mình đã bên nhau 1 năm rồi...</p>
+  <p>Vậy là mình đã bên nhau hơn 1 năm rồi...</p>
   <button onclick="nextPage(2)">Tiếp</button>
 </div>
 
 <!-- PAGE 2 -->
 <div id="p2" class="page">
   <h1>Cảm ơn em 🤍</h1>
-  <p>Cảm ơn vì đã xuất hiện trong cuộc đời anh.</p>
+  <p>Cảm ơn vì đã xuất hiện trong cuộc đời em.</p>
   <button onclick="nextPage(3)">Tiếp</button>
 </div>
 
 <!-- PAGE 3 -->
 <div id="p3" class="page">
-  <h1>Anh yêu em 🤍</h1>
+  <h1>Em yêu anh nhiều lắm 🤍</h1>
   <p>Mong rằng chúng ta sẽ còn nhiều năm nữa bên nhau.</p>
 </div>
 
